# FastSDPCertification

./: .gitignore  env.yaml  model_constraints.txt  pyproject.toml  requirements.txt  setup.py  uvq13au@jean-zay.idris.fr  weights_nn.txt
code_bin/: custom_model_data.py  custom_test_100.yaml  custom_test_mnist.yaml
config/: blob.yaml  blob_4x10.yaml  blob_nn.yaml  blob_one_data_benchmark.yaml  cifar10-fcna.yaml  cifar10-fcnb.yaml  cifar100-fcna.yaml  concatmnist-5-classes.yaml  concatmnist_20_classes.yaml  concatmnist_50_classes.yaml  concatmnist_5_classes.yaml  concatmnist_67_classes.yaml  mnist-6x100.yaml  mnist-6x200.yaml  mnist-8x1024-0.1.yaml  mnist-8x1024-0.3.yaml  mnist-9x100.yaml  mnist-9x200.yaml  mnist-MLP-ADV.yaml  mnist-sdp-crown-mlp.yaml  mnist_one_data_benchmark.yaml  moon.yaml  moon_nn.yaml  moon_one_data_benchmark.yaml
config/networks/: 6x100.yaml  6x200.yaml  8x1024-0.1.yaml  8x1024-0.3.yaml  9x100.yaml  9x200.yaml  MLP-ADV.yaml  MLP-LP.yaml  blob_nn.yaml  blob_nn_4x10.yaml  concatmnist-6x100-10-classes.yaml  concatmnist-6x100-20-classes.yaml  concatmnist-6x100-5-classes.yaml  concatmnist-6x100-50-classes.yaml  fcna.yaml  (+7 more)
notebooks/: aaai_compare_benchmarks.ipynb  compare_cstr.ipynb  download_cifar10.ipynb  iclr_gap_pruning.ipynb  iclr_study.ipynb  plot_certification_against_epsilon.ipynb  review_iclr.ipynb  stability_neurons.ipynb  test.ipynb  test_bb_beta-crown.ipynb  weights_nn.txt
scripts/: jean_zay_get_results.sh  run_fastsdp_cnam.sh  run_fastsdp_jean_zay.sh  run_fastsdp_job.slurm  sync_jeanzay.sh
src/: bounds.py  certification_problem.py
(+94 files in other folders)
